v1.3/markdown/asct-b/asct-b-vh-thymus.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Thymus v1.3

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Maigan Brusko; Rebecca T. Beuschel; Andrea J. Radtke |
| **Creator ORCID(s):** | [0000-0002-4331-2202](https://orcid.org/0000-0002-4331-2202); [0000-0002-3882-457X](https://orcid.org/0000-0002-3882-457X); [0000-0003-4379-8967](https://orcid.org/0000-0003-4379-8967) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Sarah A. Teichmann; Jakub Abramson; Tom Taghon; Ellen M. Quardokus  |
| **Reviewer ORCID(s):** | [0000-0002-6294-6366](https://orcid.org/0000-0002-6294-6366); [0000-0002-1745-8996](https://orcid.org/0000-0002-1745-8996); [0000-0002-5781-0288](https://orcid.org/0000-0002-5781-0288); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2022-12-15 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** |HBM375.BJGD.993 |
| **Data Table:** | [Thymus v1.3](https://hubmapconsortium.github.io/ccf-releases/v1.3/asct-b/asct-b-vh-thymus.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM375.BJGD.993](https://doi.org/10.48539/HBM375.BJGD.993) |
| **How to Cite This Data Table:** | Maigan Brusko; Rebecca T. Beuschel; Andrea J. Radtke, HuBMAP ASCT+B Tables. Thymus v1.3, https://doi.org/10.48539/HBM375.BJGD.993, Accessed on December 15, 2022. |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2021. [*HuBMAP ASCT+B Tables*](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html). Accessed on December 15, 2022. |
