v2.0/markdown/asct-b/asct-b-vh-thymus.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Thymus v1.4

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

Minor changes were made for Thymus v1.4 to ensure all cell types were mapped to Cell Ontology or had a parent cell type that mapped to Cell Ontology and genes and proteins were mapped to the Human Gene Ontology (HUGO) Gene Nomenclature Committee (HGNC). Several new cell types were added to Cell Ontology in this release cycle.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Maigan Brusko; Rebecca T. Beuschel; Andrea J. Radtke |
| **Creator ORCID(s):** | [0000-0002-4331-2202](https://orcid.org/0000-0002-4331-2202); [0000-0002-3882-457X](https://orcid.org/0000-0002-3882-457X); [0000-0003-4379-8967](https://orcid.org/0000-0003-4379-8967) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Sarah A. Teichmann; Jakub Abramson; Tom Taghon; Ellen M. Quardokus  |
| **Reviewer ORCID(s):** | [0000-0002-6294-6366](https://orcid.org/0000-0002-6294-6366); [0000-0002-1745-8996](https://orcid.org/0000-0002-1745-8996); [0000-0002-5781-0288](https://orcid.org/0000-0002-5781-0288); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2023-12-15 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD033756; OT2OD026671 |
| **HuBMAP ID:** | HBM668.QPSF.678|
| **Data Table:** | [Thymus v1.4](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/asct-b-vh-thymus.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM668.QPSF.678](https://doi.org/10.48539/HBM668.QPSF.678) |
| **How to Cite This Data Table:** | Maigan Brusko; Rebecca T. Beuschel; Andrea J. Radtke, HuBMAP ASCT+B Tables. Thymus v1.4, https://doi.org/10.48539/HBM668.QPSF.678, Accessed on December 15, 2023. |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on December 15, 2023. |
